Use Docker image for CI tasks
[#132086463]

Signed-off-by: Tiago Scolari <tscolari@pivotal.io>

--- a/ci/tasks/create-grootfs-bench-release.yml
+++ b/ci/tasks/create-grootfs-bench-release.yml
@@ -1,7 +1,7 @@
 image_resource:
   type: docker-image
   source:
-    repository: cfgarden/garden-ci
+    repository: cfgarden/grootfs-bench-release-ci
 platform: linux
 inputs:
   - name: grootfs-bench-release-version
