--- a/ci/tasks/bump-grootfs-bench-release.yml
+++ b/ci/tasks/bump-grootfs-bench-release.yml
@@ -1,7 +1,7 @@
 image_resource:
   type: docker-image
   source:
-    repository: cfgarden/grootfs-bench-release-ci
+    repository: cfgarden/grootfs-ci
 platform: linux
 inputs:
   - name: grootfs-bench-release
