Adds manifests as an input to performance-tests task in CI
Signed-off-by: Gareth Clay <gclay@pivotal.io>

--- a/ci/tasks/performance-tests.yml
+++ b/ci/tasks/performance-tests.yml
@@ -11,6 +11,7 @@ inputs:
   - name: grootfs-ci-secrets
   - name: grootfs-bench-release
   - name: grootfs-release-develop
+  - name: manifests
 
 params:
   BOSH_TARGET:
