Rename FS_DRIVER to ERRAND_NAME on ci task
[#139669391]

Signed-off-by: Tiago Scolari <tscolari@pivotal.io>

--- a/ci/tasks/performance-tests.yml
+++ b/ci/tasks/performance-tests.yml
@@ -18,7 +18,7 @@ params:
   BOSH_USER:
   BOSH_PASSWORD:
   BOSH_MANIFEST:
-  FS_DRIVER:
+  ERRAND_NAME:
   DATADOG_API_KEY:
   DATADOG_APPLICATION_KEY:
 
