--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,9 +1,7 @@
----
+bench-busybox/bench-busybox.tar:
+  size: 2644992
+  sha: ea7f84ddbef888d1e7d5d10a9be3ae1eb43ceaaf
 golang/go1.8.1.linux-amd64.tar.gz:
   size: 91277742
   object_id: 6b9e14d4-0a3b-42e0-6b81-189ece4a093e
   sha: a433f76c569055ff8536d796995518dd91a9fa5b
-busybox/busybox.tar:
-  object_id: 5476f5d3-bb4d-43ef-9c41-00a170da509c
-  sha: ea7f84ddbef888d1e7d5d10a9be3ae1eb43ceaaf
-  size: 2644992
